--- a/buscador.html
+++ b/buscador.html
@@ -15,7 +15,7 @@
 <body class="mih-100">
     <header class="padding-0-1 font-0 border-b1 borderc-grey w-100">
         <div class="maw-60">
-            <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
+            <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8 font-s">Bislai</a>
             <div class="w-50--s display-b display-ib--s texta-r--s padding-b1">
                 <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
                 <a href="http://facebook.com/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Facebook</a>
@@ -25,10 +25,8 @@
     </header>
     <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-white-9 tp-0 zi-10 ">
         <div class="maw-60 texta-c texta-l--m">
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-            <a id="buscador" class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="#">BUSCADOR</a>
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/creditos">CREDITOS</a>
-
+            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
+            <a id="buscador" class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="#">BUSCADOR</a>
         </div>
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
@@ -56,32 +54,38 @@
         </div>
     </div>
     <div class="mih-custom maw-60 margin-y1">
-      <div id="tipue_search_content">
-
-      </div>
+        <div id="tipue_search_content">
+        </div>
     </div>
     <script>
     $(document).ready(function() {
         $('#tipue_search_input').tipuesearch({
-          'minimumLength': 2,
-          'contextBuffer': 360
+            'minimumLength': 2,
+            'contextBuffer': 360
         });
     });
     </script>
     <footer class="padding-1 borderc-grey border-t1 bgc-white woodsmoke font-w6">
-  <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
-<p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
+        <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
+        <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
+        <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="http://bislai.co/creditos">CREDITOS</a>
     </footer>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-92751500-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+    ga('create', 'UA-92751500-1', 'auto');
+    ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
