--- a/creditos.html
+++ b/creditos.html
@@ -13,7 +13,7 @@
 <body class="mih-100">
     <header class="padding-0-1 font-0 border-b1 borderc-grey w-100">
           <div class="maw-60">
-            <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">Bislai</a>
+           <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8 font-s">Bislai</a>
             <div class="w-50--s display-b display-ib--s texta-r--s padding-b1">
                 <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
                 <a href="http://facebook.com/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Facebook</a>
@@ -80,10 +80,11 @@
 
     </div>
 
-      <footer class="padding-1 borderc-grey border-t1 bgc-white woodsmoke font-w6">
-        <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
-      <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
-    </footer>
+<footer class="padding-1 borderc-grey border-t1 bgc-white woodsmoke font-w6">
+    <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
+    <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
+    <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="http://bislai.co/creditos">CREDITOS</a>
+</footer>
     <script type="text/javascript" src="js/buscador.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
