--- a/estadisticas.html
+++ b/estadisticas.html
@@ -23,9 +23,9 @@
     </header>
     <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-white-9 tp-0 zi-10 ">
         <div class="maw-60 texta-c texta-l--m">
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-            <a id="buscador" class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="#">BUSCADOR</a>
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/creditos">CREDITOS</a>
+           <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
+           <a id="buscador" class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="#">BUSCADOR</a>
+
         </div>
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
@@ -154,6 +154,7 @@
     <footer class="padding-1 borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
+        <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="http://bislai.co/creditos">CREDITOS</a>
     </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/ScrollMagic.min.js"></script>
