--- a/index.html
+++ b/index.html
@@ -36,94 +36,14 @@
         </div>
     </div>
     <div class="maw-60 padding-1 padding-1-0--l">
-        <p class="font-1">Bislai nace en una sobremesa de un día de octubre. Mientras veía el telediario de Aragon TV una reportera informaba sobre una votación en el pleno del Ayuntamiento de Zaragoza de la que no tenía noticia alguna. Así que cuando acabó la pieza decidí buscar información, encontre la página de plenos del Ayuntamiento de Zaragoza. Allí estaba toda la información en bruto, sin distinción alguna. Así que se me ocurrió la idea de recopilar toda la información de todos los plenos y mostrarla de una manera más visual.
+        <p class="font-1">Bislai es la <strong>respuesta</strong> a lo que encontre en la página de plenos del <strong>Ayuntamiento de Zaragoza</strong>. Toda la <strong>información en bruto, sin distinción alguna</strong>. La idea es mostrar los plenos de una manera más <strong>accesible y visual</strong>.
         </p>
-        <p class="font-1">En esta serie de datos y gráficas vamos a ver como gestionan los diferentes partidos los 328893 votos de los zaragozanos que decidieron ejercer su derecho a voto en las elecciones municipales que se celebraron el 2 de junio de 2015 en Zaragoza. Las decisiones que se toman en el pleno afectan a los 666058 habitantes de Zaragoza.
+        <p class="font-1">Las <strong>decisiones</strong> que se toman en el pleno <strong>afectan a los 666058</strong> habitantes de <strong>Zaragoza</strong>.
         </p>
         <p class="font-1">Todos los datos han sido obtenidos de la <a class="link" href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
     </div>
     <section class="border-t1  padding-1 border-b1 grey borderc-grey padding-1-0--l">
         <h2 class="margin-b0  maw-60 font-2 margin-b2">Calendario de plenos</h2>
-        <div class="maw-60 margin-y2 border-1 borderc-black f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
-            <div class="w-30--s f-flex-1--s texta-c--s padding-1 border-r1--s borderc-black">
-                <span class="font-3 font-w8 bgc-white--s textd-n h-100p f-items-center--s f-flex--s f-justify-center--s">2015</span>
-            </div>
-            <div class="w-70--s  texta-c--s f-flex--s h-200px--s f-flex-column--s">
-                <div class="f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-07-2015">27 de julio de 2015</a>
-                    </div>
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/02-10-2015">2 de octubre de 2015</a>
-                    </div>
-                    <div class="f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/30-10-2015">30 de octubre de 2015</a>
-                    </div>
-                </div>
-                <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015">27 de noviembre de 2015</a>
-                    </div>
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015">23 de diciembre de 2015</a>
-                    </div>
-                    <div class="f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s">Bislai</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="margin-y2 maw-60 border-1 borderc-black f-flex-1--s--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s--s f-flex-row--s">
-            <div class="w-30--s f-flex-1--s--s texta-c--s padding-1 border-r1--s borderc-black">
-                <span class="night-rider font-3 font-w8 bgc-white--s textd-n h-100p f-items-center--s f-flex--s f-justify-center--s">2016</span>
-            </div>
-            <div class="w-70--s  texta-c--s  f-flex--s h-400px--s f-flex-column--s">
-                <div class="f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-07-2015">28 de enero de 2016</a>
-                    </div>
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/02-10-2015">26 de febrero de 2016</a>
-                    </div>
-                    <div class="f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/30-10-2015">23 de marzo de 2016</a>
-                    </div>
-                </div>
-                <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s  f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015">29 de abril de 2016</a>
-                    </div>
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015">27 de mayo de 2016</a>
-                    </div>
-                    <div class="f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="">1 de julio de 2016</a>
-                    </div>
-                </div>
-                <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015">22 de julio de 2016</a>
-                    </div>
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015">30 de septiembre de 2016</a>
-                    </div>
-                    <div class="f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="">28 de octubre de 2016</a>
-                    </div>
-                </div>
-                <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015">2 de diciembre de 2016</a>
-                    </div>
-                    <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                        <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015">23 de diciembre de 2016</a>
-                    </div>
-                    <div class="f-flex-1--s texta-c--s padding-1">
-                        <span class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s">Bislai</span>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
     <footer class="padding-1 padding-1-0--l borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
