--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </p>
         <p class="font-1">Las <strong>decisiones</strong> que se toman en el pleno <strong>afectan a los 666058</strong> habitantes de <strong>Zaragoza</strong>.
         </p>
-        <p class="font-1">Todos los datos han sido obtenidos de la <a class="link" href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
+        <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
     </div>
     <section class="border-t1  padding-1 border-b1 grey borderc-grey padding-1-0--l">
         <h2 class="margin-b0  maw-60 font-2 margin-b2">Calendario de plenos</h2>
