--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Bislai - votaciones en el Ayuntamiento de Zaragoza</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/tipuesearch_content.js"></script>
+    <script type="text/javascript" src="js/tipuesearch_set.js"></script>
+    <script type="text/javascript" src="js/tipuesearch.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
@@ -48,6 +52,8 @@
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
         <a class="maw-60 font-08 font-1--s padding-r0 padding-r1-5--m underline letter-0 letter-0-12--s black vertical-am display-b font-s" href="http://bislai.co/creditos">CREDITOS</a>
     </footer>
+    <script type="text/javascript" src="js/d3.min.js"></script>
+    <script type="text/javascript" src="js/mapa.js"></script>
     <script>
     $(document).ready(function() {
         $('#tipue_search_input').tipuesearch({
