--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 
 <body class="mih-100">
-    <header class="padding-0-1 font-0 border-b1 borderc-greyc w-100">
+    <header class="padding-1 font-0 border-b1 borderc-greyc w-100 pos-sy tp-0 bgc-white">
         <nav class="maw-60 nav-grid">
-            <a href="http://bislai.co" class="textd-n  black  font-2 padding-1-0  margin-y0  bold display-ib vertical-am font-w8 font-s nav-grid-first">
+            <a href="http://bislai.co" class="textd-n  black font-1 font-2--m padding-0 padding-1-0--m  margin-y0  bold display-ib vertical-am font-w8 font-s nav-grid-first">
               BISLAI
             </a>
             <div class="nav-grid-second">
@@ -49,7 +49,11 @@
     <footer class="padding-1 padding-1-0--l borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
-        <a class="maw-60 font-08 font-1--s padding-r0 padding-r1-5--m underline letter-0 letter-0-12--s black vertical-am display-b font-s" href="http://bislai.co/creditos">CREDITOS</a>
+        <div class="maw-60">
+            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="http://bislai.co/creditos">CREDITOS</a>
+            <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
+            <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
+        </div>
     </footer>
     <script type="text/javascript" src="js/d3.min.js"></script>
     <script type="text/javascript" src="js/mapa.js"></script>
