--- a/buscador.html
+++ b/buscador.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Tipue Search Static Mode Demo</title>
@@ -12,40 +13,28 @@
 </head>
 
 <body class="mih-100">
-    <header class="padding-1 font-0 border-b1 borderc-greyc w-100 pos-sy tp-0 bgc-white">
+    <header class="padding-0-1 font-0 border-b1 borderc-greyc grey w-100 pos-sy tp-0 zi-10">
         <nav class="maw-60 nav-grid">
             <a href="http://bislai.co" class="textd-n  black font-1 font-2--m padding-0 padding-1-0--m  margin-y0  bold display-ib vertical-am font-w8 font-s nav-grid-first">
-BISLAI
-</a>
-            <div class="nav-grid-second">
+        BISLAI
+        </a>
+            <div class="padding-1 w-100--m maw-70p--l">
+                <div class="pos-r">
+                    <form action="http://bislai.co/buscador">
+                        <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                        <button class="btn-search bgc-white" type="submit">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
+                            </svg>
+                        </button>
+                    </form>
+                </div>
+            </div>
+            <div class="nav-grid-second display-n display-ib--m">
                 <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline black vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
             </div>
         </nav>
     </header>
-    <div class="border-b1 borderc-greyc w-100 padding-1 grey padding-1-0--l">
-        <div class="maw-60 pos-r">
-            <form class="w-100 w-60--s" action="http://bislai.co/buscador">
-                <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-                <button class="btn-search bgc-white" type="submit">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
-                    </svg>
-                </button>
-            </form>
-        </div>
-    </div>
-    <div class="border-b1 borderc-grey w-100 padding-2-0">
-        <div class="maw-60 pos-r">
-            <form action="buscador">
-                <input class="w-40 padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-                <button class="btn-search transparent" type="submit">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
-                    </svg>
-                </button>
-            </form>
-        </div>
-    </div>
     <div class="mih-custom maw-60 margin-y1">
         <div id="tipue_search_content">
         </div>
@@ -62,10 +51,10 @@ BISLAI
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
         <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
         <div class="maw-60">
-    <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="http://bislai.co/creditos">CREDITOS</a>
-    <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
-    <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
-</div>
+            <a class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1" href="http://bislai.co/creditos">CREDITOS</a>
+            <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
+            <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
+        </div>
     </footer>
     <script>
     (function(i, s, o, g, r, a, m) {
@@ -84,4 +73,5 @@ BISLAI
     ga('send', 'pageview');
     </script>
 </body>
+
 </html>
