--- a/creditos.html
+++ b/creditos.html
@@ -10,28 +10,28 @@
 </head>
 
 <body class="mih-100">
-<header class="font-0 border-b1 borderc-greyc grey w-100 pos-sy tp-0 zi-10">
-    <nav class="maw-60 nav-grid">
-        <a href="http://bislai.co" class="textd-n black font-1 font-2--m margin-y0  bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
-        BISLAI
-        </a>
-        <div class="w-100--m maw-70p--l">
-            <div class="pos-r">
-                <form action="http://bislai.co/buscador">
-                    <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-                    <button class="btn-search bgc-white" type="submit">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                            <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
-                        </svg>
-                    </button>
-                </form>
+    <header class="font-0 border-b1 borderc-greyc grey w-100 pos-sy tp-0 zi-10">
+        <nav class="padding-0-1 nav-grid">
+            <a href="http://bislai.co" class="textd-n black font-1 font-2--m margin-y0  bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
+            BISLAI
+            </a>
+            <div class="w-100--m maw-70p--l">
+                <div class="pos-r">
+                    <form action="http://bislai.co/buscador">
+                        <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                        <button class="btn-search bgc-white" type="submit">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
-        </div>
-        <div class="nav-grid-second display-n display-ib--m">
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline black vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-        </div>
-    </nav>
-</header>
+            <div class="nav-grid-second display-n display-ib--m">
+                <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline black vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
+            </div>
+        </nav>
+    </header>
     <div class="maw-60 margin-y1">
 
     <p>Todos los datos de las mociones han sido obtenidos de la web del Ayuntamiento de Zaragoza. En un futuro no muy lejano la idea es presentar los datos de las mociones como objetos JSON siguiendo los patrones establecidos en la API del Ayuntamiento de Zaragoza.</p>
