--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="js/tipuesearch_content.js"></script>
     <script type="text/javascript" src="js/tipuesearch_set.js"></script>
     <script type="text/javascript" src="js/tipuesearch.min.js"></script>
+    <script src="//maps.google.com/maps/api/js?sensor=true"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
