--- a/buscador.html
+++ b/buscador.html
@@ -22,7 +22,7 @@
             <div class="pos-r">
                 <form action="http://bislai.co/buscador">
                     <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-                    <button class="btn-search bgc-white" type="submit">
+                    <button class="btn-search" type="submit">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                             <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
                         </svg>
